2010-02-03 Braden McDaniel  <braden@endoframe.com>

	* doc/Doxyfile: Suppress generation of the bug, todo, and test
	list pages.

2010-02-01 Braden McDaniel  <braden@endoframe.com>

	Add previous/up/next navigation to documentation pages.

	* doc/doxygen-header
	* doc/conformance.doc
	* doc/gpl.doc
	* doc/index.doc
	* doc/intro.doc
	* doc/lgpl.doc
	* doc/libopenvrml.doc
	* doc/parsing.doc

2010-01-23 Braden McDaniel  <braden@endoframe.com>

	Doxygen formatting improvements for tables.

	* doc/doxygen-header
	* doc/index.doc

2010-01-23 Braden McDaniel  <braden@endoframe.com>

	* doc/doxygen-header: Just center the h3 text on the main
	page (that is, the version text).

2010-01-23 Braden McDaniel  <braden@endoframe.com>

	Move documentation concerning rotation normalization from
	openvrml::sfrotation to openvrml::rotation.

	* src/libopenvrml/openvrml/basetypes.cpp
	* src/libopenvrml/openvrml/field_value.cpp

2010-01-23 Braden McDaniel  <braden@endoframe.com>

	Doxygen formatting improvements.

	* doc/doxygen-header
	* doc/index.doc

2010-01-23 Braden McDaniel  <braden@endoframe.com>

	Doc-comment fixes and improvements.

	* src/libopenvrml/openvrml/event.cpp
	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/script.cpp
	* src/libopenvrml/openvrml/node_impl_util.h
	* src/libopenvrml/openvrml/scope.cpp
	* src/libopenvrml/openvrml/field_value.cpp
	* src/libopenvrml/openvrml/browser.cpp

2010-01-23 Braden McDaniel  <braden@endoframe.com>

	Escape control characters for doxygen.

	* doc/gpl.doc
	* doc/conformance.doc

2009-11-28 Braden McDaniel  <braden@endoframe.com>

	* src/Makefile.am: Only install openvrml-player.ui if we were
	configured to build openvrml-player.

2009-11-27 Braden McDaniel  <braden@endoframe.com>

	* src/script/java.cpp (load_libjvm::load_libjvm()): Improved error
	messages when loading libjvm fails.

2009-11-26 Braden McDaniel  <braden@endoframe.com>

	* doc/Doxyfile: Upgraded for Doxygen 1.6.1.
